<resources>
    <string name="app_name">HealthHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_health_articles">Health Articles</string>
    <string name="title_medicines">Medicines</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="reg">Register for new user</string>
    <string name="gif">gif</string>
    <string name="cart">Go to Cart</string>
    <string name="back">Back</string>
    <string name="tagline">Health is Wealth</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="account">Already have an account?</string>
    <string name="addcart">Cart</string>
    <string name="add_cart">Cart</string>
    <string name="refresh">Refresh</string>
    <string name="sign_out">Sign out</string>
    <string name="your_1_healthcare_app">Your #1 Healthcare App</string>
    <string name="logo">logo</string>
    <string name="medicines">Medicines</string>
    <string name="pill">pill</string>
    <string name="my_cart">My Cart</string>
    <string name="my_carts">my_cart</string>
    <string name="order_details">Order Details</string>
    <string name="order_detailss">order details</string>
    <string name="health_articles">Health Articles</string>
    <string name="health_article">health article</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="medicine_detailss">medicine details</string>
    <string name="out">Sign Out</string>
    <string name="sign_outs">sign out</string>
</resources>