<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back7"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/md_blue_100"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:fontFamily="@font/sf_regular"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_gif" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/md_blue_100"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:fontFamily="@font/sf_regular"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="username" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/sf_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewRegNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reg"
        android:fontFamily="@font/sf_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog" />

    <ImageView
        android:id="@+id/imageView_gif"
        android:layout_width="201dp"
        android:layout_height="165dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gif_logo"
        android:contentDescription="@string/gif" />
</androidx.constraintlayout.widget.ConstraintLayout>