<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back8"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/sf_regular"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />

    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:fontFamily="@font/sf_regular"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername" />

    <EditText
        android:id="@+id/editTextRegconPassword"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:fontFamily="@font/sf_regular"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_bold"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:fontFamily="@font/sf_regular"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#0D47A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="username" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_bg"
        android:text="@string/register"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegconPassword" />

    <TextView
        android:id="@+id/textViewExistUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReg" />

</androidx.constraintlayout.widget.ConstraintLayout>