<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".ui.dashboard.DashboardFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/logo"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sf_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/health_hub_image"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hubDesc"
            android:text="@string/your_1_healthcare_app"
            android:textSize="14sp"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toStartOf="@+id/health_hub_image"/>
        <ImageView
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:id="@+id/health_hub_image"
            android:src="@drawable/gif_logo"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            android:contentDescription="@string/logo" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/health_hub_image">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/pillCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pill"
                        android:text="@string/medicines"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/pill_image"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/pill_image"
                        android:src="@drawable/pills"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/pill" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/cartCard"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cart"
                        android:text="@string/my_cart"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/cart_image"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/cart_image"
                        android:src="@drawable/cart"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/my_carts" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/orderCard"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/order"
                        android:text="@string/order_details"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/order_image"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/order_image"
                        android:src="@drawable/order"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/order_detailss" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/healthCard"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/health"
                        android:text="@string/health_articles"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/health_image"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/health_image"
                        android:src="@drawable/health"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/health_article" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/medCard"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/med"
                        android:text="@string/medicine_details"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/med_image"/>

                    <ImageView
                        android:id="@+id/med_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/medicine_detailss"
                        android:src="@drawable/med"
                        tools:ignore="ImageContrastCheck" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:id="@+id/outCard"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/out"
                        android:text="@string/out"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sf_regular"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/out_image"/>
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/out_image"
                        android:src="@drawable/out"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/sign_outs" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>